--- a/app/views/contact_forms/_form.html.erb
+++ b/app/views/contact_forms/_form.html.erb
@@ -15,8 +15,8 @@
     <%= f.label :message %><br>
     <%= f.text_area :message %>
   </div>
-  <div class="actions">
-    <%= button_tag(type: 'submit', class: "btn btn-primary", id: "email-submit-button") do %>
+  <div class="actions padding-bottom">
+    <%= button_tag(type: 'submit', class: "btn btn-primary blue-button", id: "email-submit-button") do %>
       <i class="icon-ok icon-white"></i> Submit
     <% end %>
   </div>
