--- a/app/views/records/_form.html.erb
+++ b/app/views/records/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@record, :html => { :multipart => true }) do |f| %>
+<%= form_for(@record, :html => { :multipart => true, "data-ajax" => false }) do |f| %>
   <% if @record.errors.any? %>
    <div class="alert alert-danger">
       <button type="button" class="close" data-dismiss="alert">&times;</button>
