update user.css background color to #eee

--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -6,7 +6,7 @@
 
 /* overwrite wrap background color for user pages */
 #wrap {
-  background-color: #e6e6e6;
+  background-color: #eee;
 }
 
 .masonry-container {
