--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,6 +1,7 @@
 <% content_for :head do %>
   <%= stylesheet_link_tag 'static_pages' %>
   <%= stylesheet_link_tag 'records' %>
+  <%= stylesheet_link_tag 'mobile_gray_wrap' %>
   <%= javascript_include_tag 'records' %>
 <% end %>
 
@@ -8,19 +9,23 @@
 
 <div class="small-banner-image-container students-image"></div>
 
-<div class="padding-sides">
-  <h4>Contribute</h4>
-
-  <div class="preface-text">Our stories are personal, but they are not unique. Join us as we begin to document and create a space for our voices in tomorrow's Yale. This is the Yale we choose. Our voices. Our stories. Our Yale.</div>
-
+<div class="container">
+  <div class="padding-sides">
+    <h4>Contribute</h4>
+    <div class="preface-text">Our stories are personal, but they are not unique. Join us as we begin to document and create a space for our voices in tomorrow's Yale. This is the Yale we choose. Our voices. Our stories. Our Yale.</div>
+  </div>
 </div>
 
-<div class="padding-sides padding-bottom mobile-background-gray">
+<div class="mobile-background-gray">
+  <div class="container">
+    <div class="padding-sides padding-bottom">
 
-  <%= render 'form' %>
+      <%= render 'form' %>
 
-  <div class="clear-floats"></div>
+      <div class="clear-floats"></div>
 
-  <div class="postscript-text">To discuss donating other collections of personal papers or organizational records to Manuscripts and Archives, please send inquiries to: mssa.donatematerials@yale.edu</div>
-  
+      <div class="postscript-text">To discuss donating other collections of personal papers or organizational records to Manuscripts and Archives, please send inquiries to: mssa.donatematerials@yale.edu</div>
+      
+    </div>
+  </div>
 </div>
