--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -1,6 +1,7 @@
 <% content_for :head do %>
   <%= stylesheet_link_tag 'static_pages' %>
   <%= stylesheet_link_tag 'user' %>
+  <%= stylesheet_link_tag 'gray_wrap' %>
   <%= stylesheet_link_tag 'records' %>
 <% end %>
 
@@ -10,6 +11,7 @@
 
 <div class="gray-background">
   <div class="container">
+    
     <% if @user_records.length == 0 %>
       <div class="invite-submissions-container">
         <div class="center-text">Materials you contribute to the Voices archive will be available here.</div>
