move the padding-bottom declaration in static_pages to provide padding below main page content

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -23,8 +23,8 @@
 </div> <!-- /#banner-image -->
 
 <!-- page content -->
-<div class="container">
-  <div class="padding-sides padding-bottom">
+<div class="container padding-bottom">
+  <div class="padding-sides">
     <h4>The Yale Community Voices Archive</h4>
     <div class="body-text">
       The Yale Community Voices Archive (YCVA) captures digital materials related to issues of diversity and inclusion on campus during the 2015-2016 academic year. The protests made the challenges faced by students of color audible and visible to the braoder Yale community. The material produced by and related to these protests will be gathered from the stakeholders themselves through a participatory platform. The project responds to the students' user of social media for chronicling these events as well as demand from scholars and archivists seeking a user-friendly means of collecting and preserving digital content.
