update records.css to center images in records#show view

--- a/app/assets/stylesheets/records.css.scss
+++ b/app/assets/stylesheets/records.css.scss
@@ -148,7 +148,7 @@ span.btn.btn-small.btn-default.btn-inverse {
   left: 50%;
 }
 
-.record-details img {
+.record-display-container img {
   margin-bottom: 20px;
   display: block;
   margin: auto;
