update and greatly simplify footer html to display images instead of text

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,4 @@
 <div id="footer">
-  <div id="footer-left">
-    <div id="footer-left-top-brand">Yale</div>
-    <div id="footer-left-top-university">UNIVERSITY LIBRARY</div>
-    <div id="footer-left-bottom">Digital Humanities Laboratory</div>
-  </div>
-  <div id="footer-right">
-    <div id="footer-right-top">DH</div>
-    <div id="footer-right-bottom">Lab</div>
-  </div>
+  <%= image_tag("Yale-wordmark.svg", id: "footer-left", alt: "Yale logo") %>
+  <%= image_tag("dh-mark.svg", id: "footer-right", alt: "Digital Humanities logo") %>
 </div>
