--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -577,45 +577,21 @@ h4 {
   width: 100%;
   height: 140px;
   background-color: #666;
-  color: #E6E4E4;
-  font-family: 'Lato', sans-serif;
   clear: both;
-  font-weight: 300;
 }
 
 #footer-left {
   float: left;
-  padding: 40px;
-  font-family: 'Merriweather', serif;
-}
-
-#footer-left-top-brand,
-#footer-left-top-university {
-  display: inline-block;
-}
-
-#footer-left-top-brand {
-  font-size: 1.5em;
-}
-
-#footer-left-bottom {
-  font-style: italic;
-  font-weight: 100;
-  margin-top: -2px;
+  width: 350px;
+  margin-top: 40px;
+  margin-left: 50px;
 }
 
 #footer-right {
   float: right;
-  padding: 40px;
-}
-
-#footer-right-top {
-  position: absolute;
-}
-
-#footer-right-bottom {
-  margin-top: 6px;
-  margin-left: 3px;
+  width: 75px;
+  margin-top: 40px;
+  margin-right: 50px;
 }
 
 /*************************************
@@ -686,16 +662,11 @@ h4 {
 
   #footer-left {
     padding: 0px; /* remove extant padding */
-    padding-top: 20px;
-    padding-left: 20px;
     position: relative;
+    margin-top: 27px;
     width: 250px;
     margin-left: -125px;
     left: 50%;
-  }
-
-  #footer-left-bottom {
-    margin-left: 40px;
   }
 
   /************
