remove google fonts and check in typekit js in application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,9 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href='https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Merriweather:300,400,700' rel='stylesheet' type='text/css'>
+  <!-- Typekit font js dependency -->
+  <script src="https://use.typekit.net/zsb0fok.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
   <%= render 'layouts/shim' %>
 
